force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Action_History__c/ArdiraSurvey__Ardira_Record_Lifecycle_Action_History__c.object-meta.xml
<CustomObject>
    <description>Captures each lifecycle stage action history. Note that it would capture only a stage level action history and not each recipient action.</description>
    <label>Ardira Record Lifecycle Action History</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Action History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Record Lifecycle Action History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>