force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Action_History__c/fields/ArdiraSurvey__Action_Log__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Action_Log__c</fullName>
    <description>This field is used to store RLM action logs to keep track for execution history</description>
    <inlineHelpText>This field stores RLM action logs to track the execution history.</inlineHelpText>
    <label>Action Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>