force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Action_History__c/fields/ArdiraSurvey__Action_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Action_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Timestamp when the action was executed.</description>
    <inlineHelpText>This field indicates the exact date and time when the action was executed.</inlineHelpText>
    <label>Action Time</label>
    <type>DateTime</type>
</CustomField>