force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Action_History__c/fields/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lifecycle stage that was used for the action.</description>
    <inlineHelpText>An RLM stage that generated the action.</inlineHelpText>
    <label>RLM Stage</label>
    <referenceTo>ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c</referenceTo>
    <relationshipLabel>Ardira Record Lifecycle Action History</relationshipLabel>
    <relationshipName>Ardira_Record_Lifecycle_Action_History</relationshipName>
    <type>Lookup</type>
</CustomField>