force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Action_History__c/listViews/ArdiraSurvey__All.listView-meta.xml
<ListView>
    <fullName>ArdiraSurvey__All</fullName>
    <columns>ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c</columns>
    <columns>NAME</columns>
    <columns>ArdiraSurvey__Action_Time__c</columns>
    <columns>ArdiraSurvey__Action_Log__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>